# Chad-FileManager

./: .gitignore  2  CMakeLists.txt  README.md  install.sh  usage.txt
include/: infowin.h  read.h  readinfo.h  win.h
src/: main.cpp
